@@ -183,17 +183,13 @@
   }
   
   if (class(var) %in% c("RasterLayer")) {
-    max_var <- raster::maxValue(var)
-    min_var <- raster::minValue(var)
-    var <- unique(c(min_var,
-                    raster::quantile(var, seq(min_var, max_var, length = nb_quantiles)),
-                    max_var))
+    var <- raster::quantile(var, seq(0, 1, length = nb_quantiles))
     return(var)
   } else if (class(var) %in% c("RasterStack", "RasterBrick")) {
     max_var <- max(raster::maxValue(var))
     min_var <- min(raster::minValue(var))
     var <- unique(c(min_var,
-                    apply(raster::quantile(var, seq(min_var, max_var, length = nb_quantiles)), 2, stats::median),
+                    apply(raster::quantile(var, seq(0, 1, length = nb_quantiles)), 2, stats::median),
                     max_var))
     return(var)
   }
